--- a/App/Represent/mobile/src/main/res/layout/activity_moreinfo.xml
+++ b/App/Represent/mobile/src/main/res/layout/activity_moreinfo.xml
@@ -3,20 +3,23 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="#aaaaaa"
+
     android:orientation="vertical"
     tools:context="com.example.hjc.represent.moreinfo">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:background="#626262"
+        android:gravity="center">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:padding="10dp"
+            android:textSize="20sp"
+            android:textColor="#ffffff"
             android:text="More info"/>
     </LinearLayout>
 
@@ -31,16 +34,33 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+
                 android:orientation="vertical">
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="position"/>
+                    android:gravity="center_vertical"
+                    android:background="#959595"
+                    android:paddingLeft="20dp"
+                    android:paddingTop="5dp"
+                    android:paddingBottom="5dp"
+                    android:textColor="#ffffff"
+                    android:textSize="20sp"
+                    android:text="Position"
+                    />
                 <TextView
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
+                    android:background="#aaaaaa"
+                    android:gravity="center_vertical"
+                    android:paddingLeft="35dp"
+                    android:paddingRight="35dp"
+                    android:paddingBottom="20dp"
+                    android:paddingTop="20dp"
+                    android:textColor="#ffffff"
                     android:layout_height="wrap_content"
                     android:id="@+id/crinfo_position"
-                    android:text="all the info"/>
+
+                    android:text=""/>
             </LinearLayout>
 
             <LinearLayout
@@ -50,12 +70,26 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:gravity="center_vertical"
+                    android:background="#959595"
+                    android:paddingLeft="20dp"
+                    android:paddingTop="5dp"
+                    android:paddingBottom="5dp"
+                    android:textColor="#ffffff"
+                    android:textSize="20sp"
                     android:text="Past"/>
                 <TextView
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
+                    android:background="#aaaaaa"
+                    android:gravity="center_vertical"
+                    android:paddingLeft="35dp"
+                    android:paddingRight="35dp"
+                    android:paddingBottom="20dp"
+                    android:paddingTop="20dp"
+                    android:textColor="#ffffff"
                     android:layout_height="wrap_content"
                     android:id="@+id/crinfo_past"
-                    android:text="all the stuff"/>
+                    android:text=""/>
             </LinearLayout>
 
             <LinearLayout
@@ -65,12 +99,26 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:gravity="center_vertical"
+                    android:background="#959595"
+                    android:paddingLeft="20dp"
+                    android:paddingTop="5dp"
+                    android:paddingBottom="5dp"
+                    android:textColor="#ffffff"
+                    android:textSize="20sp"
                     android:text="Bill"/>
                 <TextView
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
+                    android:background="#aaaaaa"
+                    android:gravity="center_vertical"
+                    android:paddingLeft="35dp"
+                    android:paddingRight="35dp"
+                    android:paddingBottom="20dp"
+                    android:paddingTop="20dp"
+                    android:textColor="#ffffff"
                     android:layout_height="wrap_content"
                     android:id="@+id/crinfo_bill"
-                    android:text="all the stuff"/>
+                    android:text=""/>
             </LinearLayout>
 
 
