--- a/App/Represent/mobile/src/main/res/layout/activity_confirmlocation.xml
+++ b/App/Represent/mobile/src/main/res/layout/activity_confirmlocation.xml
@@ -3,10 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+
+    android:gravity="bottom"
     android:orientation="vertical"
     tools:context="com.example.hjc.represent.confirmlocation">
 
@@ -14,17 +12,22 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
+        android:gravity="center"
         android:layout_weight="5">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="you are in"/>
+            android:textSize="35sp"
+            android:text="You are in ..."/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/display_location"
+            android:textColor="#000000"
+            android:textSize="45sp"
+            android:textStyle="bold"
             android:text=""/>
 
 
@@ -34,11 +37,17 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_weight="1">
+        android:gravity="bottom"
+        android:layout_margin="0dp"
+>
 
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:padding="20dp"
+            android:background="#333399"
+            android:textColor="#ffffff"
+            android:textSize="25sp"
             android:id="@+id/confirmlocation_b1"
             android:onClick="enter"
             android:text="enter"/>
@@ -47,6 +56,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/confirmlocation_b2"
+            android:padding="20dp"
+            android:background="#cc3333"
+            android:textColor="#ffffff"
+            android:textSize="25sp"
             android:onClick="back"
             android:text="back"/>
 
