--- a/App/Represent/mobile/src/main/res/layout/activity_crinfo.xml
+++ b/App/Represent/mobile/src/main/res/layout/activity_crinfo.xml
@@ -3,33 +3,40 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+
     android:orientation="vertical"
+    android:background="#898989"
     tools:context="com.example.hjc.represent.crinfo">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:background="#626262"
+        android:gravity="center">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:padding="10dp"
+            android:textSize="20sp"
+            android:textColor="#ffffff"
             android:text="INFO"/>
     </LinearLayout>
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_weight="9">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+
             android:orientation="vertical">
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:gravity="center_vertical"
+                android:background="#959595"
                 android:orientation="horizontal">
 
                 <ImageView
@@ -40,7 +47,10 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="name: "
+                    android:layout_marginLeft="20dp"
+                    android:textSize="30sp"
+                    android:text=""
+                    android:textColor="#ffffff"
                     android:id="@+id/crinfo_name"/>
 
             </LinearLayout>
@@ -48,31 +58,50 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="#aaaaaa"
+                android:padding="20dp"
                 android:orientation="vertical">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="party: "
+                    android:text=""
+                    android:paddingBottom="20dp"
+                    android:layout_marginLeft="40dp"
+                    android:textSize="30sp"
+
+                    android:textColor="#ffffff"
                     android:id="@+id/crinfo_party"/>
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="contact: "
+                    android:text=""
+                    android:layout_marginLeft="40dp"
+                    android:textSize="25sp"
+
+                    android:textColor="#ffffff"
                     android:id="@+id/crinfo_contact"/>
 
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+
+                android:background="#898989">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/crinfo_twt"
-                    android:text="tweet: "/>
+                    android:layout_marginLeft="50dp"
+                    android:padding="30dp"
+                    android:textSize="20sp"
+                    android:textStyle="italic"
+
+                    android:textColor="#ffffff"
+                    android:text=""/>
 
             </LinearLayout>
         </LinearLayout>
@@ -85,6 +114,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="more..."
+            android:textSize="20sp"
+            android:padding="25dp"
             android:onClick="moreinfo"/>
     </LinearLayout>
 
