--- a/App/Represent/mobile/src/main/res/layout/activity_crlist.xml
+++ b/App/Represent/mobile/src/main/res/layout/activity_crlist.xml
@@ -3,20 +3,23 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+
     android:orientation="vertical"
     tools:context="com.example.hjc.represent.crlist">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:padding="25dp">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="congressional representatives"/>
+            android:text="Congressional Representatives"
+            android:textStyle="bold"
+            android:textSize="20dp"
+
+            android:id="@+id/temptemp"/>
 
 
     </LinearLayout>
@@ -24,7 +27,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        >
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -32,17 +36,25 @@
             android:orientation="horizontal"
             android:id="@+id/crlist_b1"
             android:onClick="cr1"
+            android:padding="20dp"
+            android:layout_marginTop="10dp"
+            android:gravity="center_vertical"
             android:clickable="true"
             android:focusable="true">
 
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/crpic1"/>
+                android:id="@+id/crpic1"
+                android:layout_marginRight="20dp"/>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:textAlignment="center"
+                android:textColor="#ffffff"
+                android:textSize="30sp"
                 android:id="@+id/crname1"
                 android:text=""/>
         </LinearLayout>
@@ -53,17 +65,24 @@
             android:orientation="horizontal"
             android:id="@+id/crlist_b2"
             android:onClick="cr2"
+            android:padding="20dp"
+            android:layout_marginTop="10dp"
+            android:gravity="center_vertical"
             android:clickable="true"
             android:focusable="true">
 
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/crpic2"/>
+                android:id="@+id/crpic2"
+                android:layout_marginRight="20dp"/>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:textColor="#ffffff"
+                android:textSize="30sp"
                 android:id="@+id/crname2"
                 android:text=""/>
         </LinearLayout>
@@ -74,17 +93,24 @@
             android:orientation="horizontal"
             android:id="@+id/crlist_b3"
             android:onClick="cr3"
+            android:padding="20dp"
+            android:layout_marginTop="10dp"
+            android:gravity="center_vertical"
             android:clickable="true"
             android:focusable="true">
 
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/crpic3"/>
+                android:id="@+id/crpic3"
+                android:layout_marginRight="20dp"/>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:textSize="30sp"
+                android:textColor="#ffffff"
                 android:id="@+id/crname3"
                 android:text=""/>
         </LinearLayout>
