--- a/App/Represent/mobile/src/main/res/layout/activity_enterlocation.xml
+++ b/App/Represent/mobile/src/main/res/layout/activity_enterlocation.xml
@@ -3,23 +3,24 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+
     android:orientation="vertical"
     tools:context="com.example.hjc.represent.enterlocation">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:gravity="center"
         android:layout_weight="5">
 
         <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/zip_enter"
-            android:hint="94720"/>
+            android:textSize="45sp"
+            android:textStyle="bold"
+            android:textColor="#000000"
+            android:hint="- - - - -"/>
 
 
     </LinearLayout>
@@ -28,12 +29,18 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_weight="1">
+        android:gravity="bottom"
+        android:layout_margin="0dp"
+>
 
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/enterlocation_b1"
+            android:padding="25dp"
+            android:background="#333399"
+            android:textColor="#ffffff"
+            android:textSize="25sp"
             android:onClick="enter"
             android:text="enter"/>
 
@@ -41,6 +48,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/enterlocation_b2"
+            android:padding="20dp"
+            android:background="#cc3333"
+            android:textColor="#ffffff"
+            android:textSize="25sp"
             android:onClick="back"
             android:text="back"/>
 
